--- a/scss/header.scss
+++ b/scss/header.scss
@@ -15,16 +15,17 @@
   }
 
   &--one .content {
-    margin: $gutter*15;
+    margin: $gutter*10;
     text-align: center;
     word-break: break-all;
   }
 
   &--two {
-    min-height: 70vh;
-    background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
-    background-position: 0 0;
-    background-size: contain;
+    max-width: 100%;
+    background: transparent url("img/bg-subpage.jpg") no-repeat fixed;
+    background-size: cover;
+    object-position: 0 0;
+
   }
 
   &--two .content {
