--- a/scss/card.scss
+++ b/scss/card.scss
@@ -1,7 +1,6 @@
 @import "scss/variables";
 
 .card {
-  width: 100%;
   display: flex;
   width: 100%;
   overflow: auto;
@@ -10,13 +9,14 @@
 
   &__content {
     display: flex;
+    margin-bottom: $gutter * 2;
     flex-direction: column;
     align-items: center;
   }
 
   &__img {
     width: 80%;
-    margin: 0 auto;
+    margin: 0 auto $gutter;
     border-radius: 100%;
   }
 
