--- a/scss/list.scss
+++ b/scss/list.scss
@@ -8,6 +8,10 @@
   overflow: hidden;
   flex-direction: row;
 
+  &__container {
+    margin-bottom: $gutter;
+  }
+
   &__content {
     display: flex;
     width: 100%;
