--- a/scss/bar.scss
+++ b/scss/bar.scss
@@ -20,7 +20,7 @@
   align-items: center;
   transition: background-color 500ms ease, color 500ms ease;
 
-  &--content a {
+  &--content a { /*stylelint-disable-line*/
     color: #fff;
     text-decoration: none;
   }
