--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -31,6 +31,7 @@
     &--one {
       opacity: 0;
       animation: fade-in 1s ease-in-out forwards 1s;
+      word-break: normal;
     }
 
     &--two {
