--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,8 @@ main {
     font-weight: bold; }
   .heading--trans--one {
     opacity: 0;
-    animation: fade-in 1s ease-in-out forwards 1s; }
+    animation: fade-in 1s ease-in-out forwards 1s;
+    word-break: normal; }
   .heading--trans--two {
     opacity: 0;
     animation: fade-in 1s ease-in-out forwards 2s; }
@@ -219,31 +220,67 @@ main {
   to {
     opacity: 1; } }
 
-.list__container {
-  margin-bottom: 20px; }
+.list {
+  padding-bottom: 40px; }
 
-.list__content {
+.item {
   display: flex;
   width: 100%;
   padding: 0;
-  margin: 60px 0;
+  margin: 70px 0;
   overflow: hidden;
   flex-direction: row; }
-  .list__content__content {
+  .item__content {
     display: flex;
     width: 100%;
     margin-left: 10px;
     flex-direction: column; }
-  .list__content__heading {
+  .item__heading {
     font-family: "Roboto Slab", serif;
     font-size: 21px;
     font-weight: bold; }
-  .list__content__text {
-    font-size: 18px; }
-  .list__content__img {
+  .item__img {
     width: 30px;
     height: 30px; }
+  .item:last-child {
+    margin-bottom: 40px; }
 
+/*
+  &__container {
+    margin-bottom: $gutter;
+  }
+
+  &__content {
+    display: flex;
+    width: 100%;
+    padding: 0;
+    margin: $gutter*3 0;
+    overflow: hidden;
+    flex-direction: row;
+
+    &__content {
+      display: flex;
+      width: 100%;
+      margin-left: $gutter / 2;
+      flex-direction: column;
+    }
+
+    &__heading {
+      font-family: "Roboto Slab", serif;
+      font-size: 21px;
+      font-weight: bold;
+    }
+
+    &__text {
+      font-size: 18px;
+    }
+
+    &__img {
+      width: 30px;
+      height: 30px;
+    }
+  }
+}*/
 @keyframes fade-in {
   from {
     opacity: 0; }
@@ -363,7 +400,7 @@ main {
     font-style: italic; }
   .blockquote--two {
     margin-bottom: 20px;
-    font-size: 0.75em; }
+    font-size: 1em; }
 
 @media (min-width: 400px) {
   .blockquote {
