--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -18,6 +18,7 @@
   }
 
   &--three {
+    align-self: center;
     font-size: 1.5em;
     font-weight: bold;
     text-align: center;
@@ -29,9 +30,9 @@
 
   &--trans {
     &--one {
+      font-weight: normal;
       opacity: 0;
       animation: fade-in 1s ease-in-out forwards 1s;
-      word-break: normal;
     }
 
     &--two {
