--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -30,17 +30,23 @@
 
   &--trans {
     &--one {
+      word-break: normal;
       font-weight: normal;
+      margin: auto;
       opacity: 0;
       animation: fade-in 1s ease-in-out forwards 1s;
     }
 
     &--two {
+      word-break: normal;
+      margin: auto;
       opacity: 0;
       animation: fade-in 1s ease-in-out forwards 2s;
     }
 
     &--three {
+      word-break: normal;
+      margin: auto;
       opacity: 0;
       animation: fade-in 1s ease-in-out forwards 3s;
     }
