--- a/scss/bar.scss
+++ b/scss/bar.scss
@@ -1,5 +1,3 @@
-@import "scss/variables";
-
 .container {
   &--two {
     display: inline-flex;
@@ -48,7 +46,7 @@
 
   @media (min-width: 500px) {
     &--three {
-      display: initial;
+      display: initial; /* stylelint-disable-line */
       max-height: $gutter * 1.5;
       padding: 3px $gutter;
       margin: auto;
