--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,7 @@
 $max-width: 1200px;
 $gutter: 20px;
 
-html {
+html { /*stylelint-disable-line*/
   box-sizing: border-box;
   margin-right: $gutter;
   margin-left: $gutter;
@@ -18,26 +18,25 @@ html {
   margin: 0;
 }
 
-img {
+img { /*stylelint-disable-line*/
   max-width: 100%;
 }
 
-main {
+main { /*stylelint-disable-line*/
   max-width: $max-width;
   margin: 0 auto;
   overflow-x: hidden;
 }
 
+@import "scss/variables";
 @import "scss/grid";
+@import "scss/bar";
 @import "scss/header";
 @import "scss/heading";
 @import "scss/text";
 @import "scss/button";
 @import "scss/card";
 @import "scss/list";
-@import "scss/variables";
 @import "scss/form";
-@import "scss/footer";
-@import "scss/cover";
 @import "scss/blockquote";
-@import "scss/bar";
+@import "scss/footer";
